--- a/dog.html
+++ b/dog.html
@@ -1,1 +1,20 @@
-<h1>Dog</h1>
+<head>
+	<link rel="stylesheet" type="text/css" href="/Users/sanghome/Documents/GitHub/lab-pr/style.css">
+</head>
+
+<body>
+	<div class="title">Tap Nation</div>
+	<div class="container">
+		<div class="topL"></div>
+		<div class="topM"></div>
+		<div class="topR"></div>
+
+		<div class="midL"></div>
+		<div class="center"></div>
+		<div class="midR"></div>
+
+		<div class="botL"></div>
+		<div class="botM"></div>
+		<div class="botR"></div>
+	</div>
+</body>
